# erc20-standard-detector

./: .default.env  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.py  settings.py
app/: alembic.ini  run.py  settings.py
app/core/: constants.py
app/database/: engines.py
app/migrations/: env.py
app/migrations/versions/: 07_07_2024_1436_0e0b478b3406_.py
app/pg/: base.py  models.py
app/schemas/: contract.py
app/services/: contract_detecor.py  contract_manager.py  messages_sender.py  scheduler.py
