[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["greatlaki <greatlaki911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
sqlalchemy-utils = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
