[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["greatlaki <greatlaki911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
ruff = "^0.5.1"
pre-commit = "^3.7.1"
mypy = "^1.10.1"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff.lint]
select = ["A", "B", "C", "E", "F", "I", "UP"]
fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
ignore = ["UP004", "D100", "D101", "D102", "D103", "D104", "D107", "D400", "D415"]

[tool.ruff]
line-length = 120
target-version = "py37"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
